--- a/index.html
+++ b/index.html
@@ -39,5 +39,23 @@
   </div>
 
   <script src="script.js"></script>
+  <!-- PAGE 4 : CARTE DES LIEUX -->
+<div id="page-4" class="page hidden">
+  <h1 class="title">Carte de l'aventure</h1>
+  <div class="map">
+    <div class="location" id="lille">
+      <h2>Lille</h2>
+      <button onclick="showLille()">Accéder</button>
+    </div>
+    <div class="location locked">
+      <h2>???</h2>
+      <p>Lieu secret</p>
+    </div>
+    <div class="location locked">
+      <h2>???</h2>
+      <p>Lieu secret</p>
+    </div>
+  </div>
+</div>
 </body>
 </html>
