--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   <section id="page-3" class="page hidden">
     <h2>Message de Brad Bitt</h2>
     <iframe id="video" width="100%" height="200" src="https://www.youtube.com/embed/2DMl0zoaPZ0?enablejsapi=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-    <button id="next-button" disabled>Suivant</button>
-    <p>Le bouton sera accessible uniquement lorsque la vidéo sera finie.</p>
+    <button id="next-button">Suivant</button>
+    <p>Le bouton est toujours accessible.</p>
   </section>
 
   <!-- PAGE 4 : Menu des lieux -->
