--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
   </section>
 
   <!-- PAGE 4 : Menu des lieux -->
-  <section id="page-4" class="page hidden">
-    <h2>Les lieux à suivre</h2>
-    <ul>
-      <li>Lille</li>
-      <li>Burger King ???</li>
-      <li>Laser Games ???</li>
-    </ul>
-  </section>
+<section id="page-4" class="page hidden">
+  <h2>Les lieux à suivre</h2>
+  <ul>
+    <li>Lille</li>
+    <li>???</li> <!-- remplace Burger King -->
+    <li>???</li> <!-- remplace Laser Games -->
+  </ul>
+</section>
 
   <script src="script.js"></script>
 </body>
