--- a/index.html
+++ b/index.html
@@ -3,39 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Update du Projet</title>
-  <style>
-    body {
-      background-color: #0f0f0f;
-      color: #f5f5f5;
-      font-family: 'Comic Sans MS', cursive, sans-serif;
-      text-align: center;
-      padding: 50px 20px;
-    }
-    .message-box {
-      border: 2px dashed #e67e22;
-      padding: 30px;
-      border-radius: 15px;
-      max-width: 700px;
-      margin: auto;
-      background-color: #1e1e1e;
-    }
-    h1 {
-      color: #e74c3c;
-      font-size: 2.5em;
-      margin-bottom: 20px;
-    }
-    p {
-      font-size: 1.2em;
-      line-height: 1.7;
-    }
-    .emoji {
-      font-size: 1.6em;
-      margin-top: 20px;
-    }
-    strong {
-      color: #f39c12;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -49,14 +17,12 @@
       🛑 Le site web ? It's cancelled (for now).<br>
       ✅ Mais no worries ! Une <strong>nouvelle alternative</strong> est déjà en préparation — plus simple, plus rapide, mais toujours aussi épique 🚀.<br><br>
 
-      Brad Bitt ne s’avoue jamais vaincu, et moi non plus 😎.<br>
+      Brad Bitt ne s’avoue jamais vaincu.<br>
       On va continuer l’aventure sous une autre forme... et croyez-moi, ça va être 🔥.<br><br>
-
-      Merci à ceux qui suivent jusqu’au bout du tunnel numérique.<br>
-      Stay tuned... the show must go on 🎭.
     </p>
     <p class="emoji">💻➡️🧠➡️🎉</p>
   </div>
 
+  <script src="script.js"></script>
 </body>
 </html>
