--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
       🛑 Le site web ? It's cancelled (for now).<br>
       ✅ Mais no worries ! Une <strong>nouvelle alternative</strong> est déjà en préparation — plus simple, plus rapide, mais toujours aussi épique 🚀.<br><br>
 
-      Brad Bitt ne s’avoue jamais vaincu.<br>
+      Brad Bitt ne s’avoue jamais vaincu, et moi non plus 😎.<br>
       On va continuer l’aventure sous une autre forme... et croyez-moi, ça va être 🔥.<br><br>
+
+      Merci à ceux qui suivent jusqu’au bout du tunnel numérique.<br>
+      Stay tuned... the show must go on 🎭.
     </p>
     <p class="emoji">💻➡️🧠➡️🎉</p>
   </div>
