--- a/index.html
+++ b/index.html
@@ -2,25 +2,17 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Update du Projet</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Brad Bitt - Recherché</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <div class="message-box">
-    <h1>🚧 Mission Update : Let’s pivot 🚧</h1>
-    <p>
-      Okay team... sometimes, even les projets les plus stylés need a <strong>plan B</strong> 💡.<br><br>
-      On voulait faire un site ? Yes. On a try hard pendant des heures ? Double yes.<br>
-      Mais là, entre les bugs, les limites techniques et le cerveau en PLS... j’ai décidé de faire un petit <strong>switch de stratégie</strong> 🔁.<br><br>
-
-      🛑 Le site web ? It's cancelled (for now).<br>
-      ✅ Mais no worries ! Une <strong>nouvelle alternative</strong> est déjà en préparation — plus simple, plus rapide, mais toujours aussi épique 🚀.<br><br>
-
-      Brad Bitt ne s’avoue jamais vaincu.<br>
-      On va continuer l’aventure sous une autre forme... et croyez-moi, ça va être 🔥.<br><br>
-    </p>
-    <p class="emoji">💻➡️🧠➡️🎉</p>
+  <div class="container">
+    <h1>🔍 Brad Bitt recherché</h1>
+    <p>pour avoir « emprunté Asterion »</p>
+    <img src="https://drive.google.com/uc?export=view&id=15K8tOOzwP_j9sr0HOqph49VrpQgffulb" alt="Brad Bitt" class="brad-photo">
+    
+    <button id="reportBtn">🚨 Signaler sa présence</button>
   </div>
 
   <script src="script.js"></script>
