--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Brad Bitt - Recherché</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Brad Bitt Recherché</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <h1>🔍 Brad Bitt recherché</h1>
-    <p>pour avoir « emprunté Asterion »</p>
-    <img src="https://drive.google.com/uc?export=view&id=15K8tOOzwP_j9sr0HOqph49VrpQgffulb" alt="Brad Bitt" class="brad-photo">
-    
-    <button id="reportBtn">🚨 Signaler sa présence</button>
+    <h1>Brad Bitt recherché</h1>
+    <p>Pour avoir « emprunté Asterion »</p>
+    <img src="https://drive.google.com/uc?export=view&id=15K8tOOzwP_j9sr0HOqph49VrpQgffulb" alt="Brad Bitt recherché">
+    <button id="report-btn">Signaler</button>
   </div>
 
   <script src="script.js"></script>
