--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Brad Bitt Recherché</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>Brad Bitt recherché</h1>
-    <p>Pour avoir « emprunté Asterion »</p>
-    <img src="https://drive.google.com/uc?export=view&id=15K8tOOzwP_j9sr0HOqph49VrpQgffulb" alt="Brad Bitt recherché">
-    <button id="report-btn">Signaler</button>
+    <h1>🔍 Brad Bitt recherché</h1>
+    <p class="subtitle">Pour avoir « emprunté Asterion »</p>
+    <img src="https://i.postimg.cc/6qdz5pq0/IMG-2917.webp" alt="Brad Bitt" class="brad-image">
+    <button onclick="alert('Signalement envoyé, merci :3 ')" class="btn">Signaler</button>
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
