--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Brad Bitt Recherché</title>
+  <title>Brad Bitt - Recherché</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <h1>🔍 Brad Bitt recherché</h1>
-    <p class="subtitle">Pour avoir « emprunté Asterion »</p>
-    <img src="https://i.postimg.cc/6qdz5pq0/IMG-2917.webp" alt="Brad Bitt" class="brad-image">
-    <button onclick="alert('Signalement envoyé, merci :3 ')" class="btn">Signaler</button>
+    <p>pour avoir « emprunté Asterion »</p>
+
+    <!-- Image corrigée avec le lien direct PostImage -->
+    <img src="https://i.postimg.cc/6qdz5pq0/IMG-2917.webp" alt="Brad Bitt" class="brad-photo">
+    
+    <button id="reportBtn">🚨 Signaler sa présence</button>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
