--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
   <div class="container">
     <h1>🔍 Brad Bitt recherché</h1>
     <p>pour avoir « emprunté Asterion »</p>
-
-    <!-- Image corrigée avec le lien direct PostImage -->
-    <img src="https://i.postimg.cc/6qdz5pq0/IMG-2917.webp" alt="Brad Bitt" class="brad-photo">
+    <img src="https://drive.google.com/uc?export=view&id=15K8tOOzwP_j9sr0HOqph49VrpQgffulb" alt="Brad Bitt" class="brad-photo">
     
     <button id="reportBtn">🚨 Signaler sa présence</button>
   </div>
