--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <img src="https://i.postimg.cc/6qdz5pq0/IMG-2917.webp" alt="Brad Bitt" class="brad-photo">
     
     <button id="reportBtn">🚨 Signaler sa présence</button>
+ <button onclick="alert('Signalement envoyé, merci :3')" class="btn">Signaler
+</button>
   </div>
 
   <script src="script.js"></script>
