--- a/index.html
+++ b/index.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Brad Bitt - Recherché</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Site en maintenance</title>
+  <style>
+    body {
+      background-color: #222;
+      color: #eee;
+      font-family: Arial, sans-serif;
+      height: 100vh;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      flex-direction: column;
+    }
+    h1 {
+      font-size: 3em;
+      margin-bottom: 0.5em;
+    }
+    p {
+      font-size: 1.5em;
+      color: #aaa;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <h1>🔍 Brad Bitt recherché</h1>
-    <p>pour avoir « emprunté Asterion »</p>
-    <img src="https://i.postimg.cc/6qdz5pq0/IMG-2917.webp" alt="Brad Bitt" class="brad-photo">
-    
- <button onclick="alert('Signalement envoyé, merci :3')" class="btn">Signaler
-</button>
-  </div>
-
-  <script src="script.js"></script>
+  <h1>Finalement, pourquoi pas</h1>
+  <p>- Brad Bitt </p>
 </body>
 </html>
