--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </style>
 </head>
 <body>
-  <h1>Finalement, pourquoi pas</h1>
+  <h1>Finalement, pourquoi pas.</h1>
   <p>- Brad Bitt </p>
 </body>
 </html>
